--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extends =
     http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+    base.cfg
 
 package-name = collective.highlighted_results
 package-extras = [test]
